# desktop

./: .gitignore  .tauriignore  Cargo.toml  README.md  TODO.md  package-lock.json  package.json  tauri.conf.json  tauri.dev2.conf.json  tauri.dev3.conf.json  vite.config.js
capabilities/: main.json
cpp/: CMakeLists.txt  CMakeUserPresets.json  chatview.cpp  chatview.h  mainwindow.cpp  mainwindow.h  mls_generate_credentials.cpp  mls_generate_credentials.h
examples/: e2e.rs
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: client.rs  client_tui.rs  lib.rs  main.rs  mls.rs
web/: index.html  main.js  styles.css
