[package]
name = "asphalt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
openmls = "0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
rand = "0.10.0"
ratatui = "0.30.0"
rpassword = "7.4.0"
rusqlite = "0.38.0"
serde = "1.0.228"
serde_cbor = "0.11.2"
sha2 = "0.10.9"
