[package]
name = "asphalt"
version = "0.1.0-alpha.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.2.0"
openmls = "0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
rand = "0.10.0"
rpassword = "7.4.0"
serde = "1.0.228"
serde_cbor = "0.11.2"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tls_codec = "0.4.2"
runway-token = "0.1.0"
zeroize = "1.8.2"
