[package]
name = "asphalt"
version = "0.1.0"
edition = "2024"

[lib]
name = "mlsffi"
crate-type = ["staticlib"] 

[build-dependencies]
cxx-build = "1.0"

[dependencies]
cxx = "1.0.194"
eframe = "0.33.3"
openmls = "0.8.0"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.0"
openmls_traits = "0.5.0"
